inserita possibilità di importare PGN

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
                 <fa-icon [icon]="faFileUpload"></fa-icon>
             </button>
         </div>
+        <button class= "btn btn-success" (click)="imporPGN()">import PGN</button> 
     </div>
 
 </div>
